manager/install/core/auth/zitadel/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: mows-core-auth-zitadel
    labels:
        mows.cloud/api-type: core
        mows.cloud/core-apis-disable-kyverno: "true"
