manager/install/core/auth/zitadel/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: zitadel-ingress
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: Host(`zitadel.vindelicorum.eu`)
          services:
              - kind: Service
                name: mows-core-auth-zitadel
                port: 8080
